# checkers-rs

./: .gitignore  Cargo.toml  README.md  king_moves_lut_gen.py
src/: board.rs  game.rs  king_moves.rs  main.rs  move.rs  player.rs  tile.rs
