[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clearscreen = "2.0.1"
dialoguer = "0.11.0"
rand = "0.8.5"
regex = "1.10.2"
slab_tree = "0.3.2"
tabled = { version = "0.14.0", features = ["color"] }
